* config/rs6000/rs6000.c (rs6000_assemble_integer): Replace 	#ifdef RELOCATABLE_NEEDS_FIXUP with if. 	* config/rs6000/linux.h (RELOCATABLE_NEEDS_FIXUP): Define in terms 	of target_flags_explicit. 	* config/rs6000/linux64.h (RELOCATABLE_NEEDS_FIXUP): Ditto for biarch 	case.  Define as 0 for non-biarch. 	(TARGET_RELOCATABLE): Don't define for biarch case.
	* mbchar.c (local_mbtowc): Ignore CROSS_COMPILE if NATIVE_CROSS.
	(local_mb_cur_max): Likewise.
	* configure.in: Set NATIVE_CROSS for ppc64->ppc32 too.
	* configure: Regenerate.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@76499 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/hammer-3_3-branch/gcc/configure.in
+++ b/hammer-3_3-branch/gcc/configure.in
@@ -1262,7 +1262,8 @@ then
 	SYSTEM_HEADER_DIR='$(CROSS_SYSTEM_HEADER_DIR)'
 	case "$host","$target" in
 	    i?86-*-*,x86_64-*-* \
-	    | powerpc*-*-*,powerpc64*-*-*)
+	    | powerpc*-*-*,powerpc64*-*-* \
+	    | powerpc64*-*-*,powerpc*-*-*)
 		CROSS="$CROSS -DNATIVE_CROSS" ;;
 	esac
 elif test "x$TARGET_SYSTEM_ROOT" != x; then
