* tree-ssa-loop-ivopts.c: New file. 	* Makefile.in (tree-ssa-loop-ivopts.o): Add. 	* expr.c (expand_expr_1): Handle expand_expr_1. 	* fold-const.c (invert_tree_comparison, invert_tree_comparison): 	Export. 	* tree-cfg.c (stmt_bsi): New function. 	* tree-flow.h (stmt_bsi, tree_ssa_dce_no_cfg_changes, 	tree_ssa_iv_optimize): Declare. 	* tree-simple.c (get_base_symbol): Handle INDIRECT_REF. 	* tree-ssa-dce.c (tree_ssa_dce_no_cfg_changes): Split from ... 	(tree_ssa_dce): ... here. 	* tree-ssa-loop.c (tree_ssa_loop_opt): Call tree_ssa_iv_optimize. 	* tree-ssanames.c (make_ssa_name): Allow creating ssa name without 	statement. 	* tree.h (invert_tree_comparison, swap_tree_comparison): Declare.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@76583 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/lno-branch/gcc/Makefile.in
+++ b/lno-branch/gcc/Makefile.in
@@ -875,6 +875,7 @@ OBJS-common = \
  tree-ssa-dom.o domwalk.o tree-tailcall.o gimple-low.o tree-iterator.o	   \
  tree-phinodes.o tree-ssanames.o tree-sra.o tree-complex.o tree-ssa-loop.o \
  tree-vectorizer.o tree-ssa-loop-im.o tree-ssa-loop-manip.o		   \
+ tree-ssa-loop-ivopts.o							   \
  alias.o bb-reorder.o bitmap.o builtins.o caller-save.o calls.o	  	   \
  cfg.o cfganal.o cfgbuild.o cfgcleanup.o cfglayout.o cfgloop.o		   \
  cfgloopanal.o cfgloopmanip.o loop-init.o loop-unswitch.o loop-unroll.o	   \
@@ -1596,6 +1597,10 @@ tree-ssa-loop-im.o : tree-ssa-loop-im.c $(TREE_FLOW_H) $(CONFIG_H) \
    $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) cfgloop.h domwalk.h $(PARAMS_H)\
    output.h diagnostic.h $(TIMEVAR_H) $(TM_H) coretypes.h $(TREE_DUMP_H) \
    tree-pass.h
+tree-ssa-loop-ivopts.o : tree-ssa-loop-ivopts.c $(TREE_FLOW_H) $(CONFIG_H) \
+   $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) cfgloop.h varray.h $(EXPR_H) \
+   output.h diagnostic.h $(TIMEVAR_H) $(TM_H) coretypes.h $(TREE_DUMP_H) \
+   tree-pass.h $(GGC_H)
 tree-ssa-loop-manip.o : tree-ssa-loop-manip.c $(TREE_FLOW_H) $(CONFIG_H) \
    $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) cfgloop.h \
    output.h diagnostic.h $(TIMEVAR_H) $(TM_H) coretypes.h $(TREE_DUMP_H) \
