--- a/gcc/ada/Makefile.in
+++ b/gcc/ada/Makefile.in
@@ -1287,11 +1287,13 @@ ifeq ($(strip $(filter-out %x86_64 linux%,$(arch) $(osys))),)
   system.ads<5nsystem.ads
 
   TOOLS_TARGET_PAIRS=mlib-tgt.adb<5lml-tgt.adb
-  MISCLIB=
+  SYMLIB = -laddr2line -lbfd -liberty $(LIBINTL)
   THREADSLIB=-lpthread
   GNATLIB_SHARED=gnatlib-shared-dual
+  GMEM_LIB = gmemlib
   PREFIX_OBJS=$(PREFIX_REAL_OBJS)
   LIBRARY_VERSION := $(LIB_VERSION)
+
 endif
 
 # The runtime library for gnat comprises two directories.  One contains the
