--- a/lno-branch/gcc/Makefile.in
+++ b/lno-branch/gcc/Makefile.in
@@ -1641,7 +1641,7 @@ tree-data-ref.o: tree-data-ref.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
    tree-data-ref.h tree-scalar-evolution.h tree-fold-const.h tree-pass.h
 tree-vectorizer.o: tree-vectorizer.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
    errors.h $(GGC_H) $(OPTABS_H) $(TREE_H) $(RTL_H) $(BASIC_BLOCK_H) diagnostic.h \
-   $(TREE_FLOW_H) $(TREE_DUMP_H) $(TIMEVAR_H) real.h cfgloop.h tree-chrec.h tree-pass.h \
+   $(TREE_FLOW_H) $(TREE_DUMP_H) $(TIMEVAR_H) cfgloop.h tree-chrec.h tree-pass.h \
    tree-vectorizer.h tree-data-ref.h tree-scalar-evolution.h tree-fold-const.h
 c-call-graph.o : c-call-graph.c $(CONFIG_H) $(SYSTEM_H) $(C_TREE_H) \
    $(C_COMMON_H) diagnostic.h hard-reg-set.h $(BASIC_BLOCK_H) $(TREE_FLOW_H) \
