* Makefile.in (bt-load.o): Depend on except.h. 	* bt-load.c (except.h): #include. 	(compute_defs_uses_and_gen): If insn at end of BB can throw 	within this function, consider registers used by it unavailable for 	btr migration. 	(move_btr_def): If insn at end of BB can throw, insert before rather 	than after.
	* flags.h (flag_btr_bb_exclusive): Declare.
	* toplev.c (flag_btr_bb_exclusive): New variable.
	(f_options): Add btr-bb-exclusive.
	* bt-load.c (augment_live_range): Restore old behaviour if
	flag_btr_bb_exclusive is set.
	* common.opt: Add entry for -fbtr-bb-exclusive.
	* opts.c (common_handle_options): Same.
	* doc/invoke.texi: Document -fbtr-bb-exclusive.

	* bt-load.c (btrs_live_at_end): New variable.
	(compute_defs_uses_and_gen): Compute its pointed-to array.
	(clear_btr_from_live_range, add_btr_to_live_range): Update it.
	(augment_live_range): When augmenting with a new dominator,
	use only its btrs_live_at_end set, but also add in the full set
	of the old dominator.
	(btr_def_live_range): Use btrs_live_at_end.
	(move_btr_def): Set other_btr_uses_before_def, and move new set
	to the end of the basic block, if appropriate.
	(migrate_btr_defs): Allocate and free btrs_live_at_end.

	* bt-load.c (basic_block_freq): Remove outdated comment.

2004-01-27  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.h: Correct target_flags free bits comment.
	(PREDICATE_CODES): Remove duplicate.
	* config/rs6000/linux64.h (CPP_SYSV_SPEC): Don't define.
	(SUBSUBTARGET_OVERRIDE_OPTIONS): Disallow 32 bit TARGET_PROFILE_KERNEL.
	(MASK_PROFILE_KERNEL): Adjust define.

2004-01-27  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (ix86_constant_alignment): Decrease alignment
	of long string literals from 32 bytes to sizeof (void *) when !-Os
	and to 1 with -Os.

2004-01-26  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.c (h8300_tiny_constant_address_p): Accept
	constant addresses in the normal mode.

2004-01-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1760,7 +1760,7 @@ postreload.o : postreload.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H)
 caller-save.o : caller-save.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) \
    flags.h $(REGS_H) hard-reg-set.h insn-config.h $(BASIC_BLOCK_H) function.h \
    $(RECOG_H) reload.h $(EXPR_H) toplev.h $(TM_P_H)
-bt-load.o : bt-load.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
+bt-load.o : bt-load.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) except.h \
    $(BASIC_BLOCK_H) $(RTL_H) hard-reg-set.h $(REGS_H) $(OBSTACK_H) $(TM_P_H) \
    $(FIBHEAP_H) output.h $(TARGET_H) $(EXPR_H) flags.h $(INSN_ATTR_H)
 reorg.o : reorg.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) conditions.h \
