* Makefile.in (cfghooks.o): Add TIMEVAR_H and toplev.h dependency. 	* basic-block.h (tidy_fallthru_edge, tidy_fallthru_edges, dump_bb, 	verify_flow_info): Declaration removed. 	* cfg.c (verify_flow_info, dump_bb): Moved to cfghooks.c. 	(debug_bb, debug_bb_n): Add argument to dump_bb call. 	* cfgcleanup.c (try_simplify_condjump, try_crossjump_to_edge, 	try_optimize_cfg, delete_unreachable_blocks): Use delete_basic_block 	instead of delete_block. 	* cfghooks.c: Include timevar.h and toplev.h. 	(cfg_hooks): Define here. 	(verify_flow_info, dump_bb): Moved from cfg.c. 	(redirect_edge_and_branch, redirect_edge_and_branch_force, 	split_block, split_block_after_labels, move_block_after, 	delete_basic_block, split_edge, create_basic_block, 	create_empty_bb, can_merge_blocks_p, merge_blocks, 	make_forwarder_block, tidy_fallthru_edge, tidy_fallthru_edges): 	New functions. 	* cfghooks.h (struct cfg_hooks): Added fields name, 	make_forwarder_block, tidy_fallthru_edge and 	move_block_after. Changed type of verify_flow_info, dump_bb, 	split_block fields. Renamed cfgh_split_edge and delete_block 	fields. 	(redirect_edge_and_branch, redirect_edge_and_branch_force, 	split_block, delete_block, split_edge, create_basic_block, 	can_merge_blocks_p, merge_blocks): Macros removed. 	(cfg_hooks): Do not export. 	(verify_flow_info, dump_bb, redirect_edge_and_branch, 	redirect_edge_and_branch_force, split_block, split_block_after_labels, 	move_block_after, delete_basic_block, split_edge, create_basic_block, 	create_empty_bb, can_merge_blocks_p, merge_blocks, 	make_forwarder_block, tidy_fallthru_edge, tidy_fallthru_edges): 	Declare. 	(cfg_layout_rtl_cfg_hooks): Declare. 	* cfgloop.c (update_latch_info, mfb_keep_just, mfb_keep_nonlatch): 	New functions. 	(canonicalize_loop_headers): Use new semantics of make_forwarder_block. 	(redirect_edge_with_latch_update): Removed. 	(make_forwarder_block): Moved to cfghooks.c, semantics changed. 	* cfgloopmanip.c (remove_bbs): Do not update dominators here.

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1686,7 +1686,7 @@ cfg.o : cfg.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) flags.h insn-
    $(BASIC_BLOCK_H) $(REGS_H) hard-reg-set.h output.h toplev.h $(RECOG_H) \
    function.h except.h $(GGC_H) $(TM_P_H) alloc-pool.h
 cfghooks.o: cfghooks.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) $(TREE_H) \
-   $(BASIC_BLOCK_H) cfglayout.h
+   $(BASIC_BLOCK_H) cfglayout.h $(TIMEVAR_H) toplev.h
 cfgrtl.o : cfgrtl.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) flags.h \
    insn-config.h $(BASIC_BLOCK_H) $(REGS_H) hard-reg-set.h output.h toplev.h $(RECOG_H) \
    function.h except.h $(GGC_H) $(TM_P_H) insn-config.h $(EXPR_H)
