* Makefile.am: Added gnu/awt/xlib/XFontPeer.java. 	* Makefile.in: Re-generated. 	* gnu/awt/xlib/XFontPeer.java: New file. 	* gnu/awt/xlib/XGraphics.java (setFont): Test for null font. 	(setClip): Commented out debug printout. 	* gnu/awt/xlib/XToolkit.java: Change superclass to ClasspathToolkit. 	(getFontPeer): Return XFontPeer. 	(getLocalGraphicsEnvironment): New method. 	(getClasspathFontPeer): New method. 	(createFont): New method.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76891 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -2870,6 +2870,7 @@ gnu/awt/xlib/XGraphics.java \
 gnu/awt/xlib/XGraphicsConfiguration.java \
 gnu/awt/xlib/XOffScreenImage.java \
 gnu/awt/xlib/XPanelPeer.java \
+gnu/awt/xlib/XFontPeer.java \
 gnu/awt/xlib/XToolkit.java
 
 x_nat_source_files = \
