--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -876,11 +876,13 @@ else
 
    # Test for Gtk stuff, if asked for.
    if test "$use_gtk_awt" = yes; then
-      AM_PATH_GTK_2_0(2.2.0,,exit 1)
-      AM_PATH_GLIB_2_0(2.2.0,,exit 1,gthread)
-      dnl XXX Fix me when libart.m4 has the compile test fixed!
-      enable_libarttest=no
-      AM_PATH_LIBART(2.1.0,,exit 1)
+      PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.2)
+      AC_SUBST(GTK_CFLAGS)
+      AC_SUBST(GTK_LIBS)
+
+      PKG_CHECK_MODULES(LIBART, libart-2.0 >= 2.1)
+      AC_SUBST(LIBART_CFLAGS)
+      AC_SUBST(LIBART_LIBS)
    fi
 
    # On Solaris, and maybe other architectures, the Boehm collector
