* alias.c (record_set): Use hard_regno_nregs. 	* bt-load.c (find_btr_reference, note_btr_set): Likewise. 	* builtins.c (apply_args_size): Likewise. 	* caller-save.c (setup_save_areas, save_call_clobbered_regs, 	mark_set_regs, add_stored_regs, mark_referenced_regs, 	insert_restore, insert_save, insert_one_insn): Likewise. 	* cfgcleanup.c: Include regs.h 	(mark_effect, mentions_nonequal_regs): Likewise. 	* cfgrtl.c (mark_killed_regs): Likewise 	* combine.c (update_table_tick, record_value_for_reg, 	record_dead_and_set_regs, get_last_value_validate, use_crosses_set_p, 	reg_dead_at_p_1, reg_dead_at_p, mark_used_regs_combine, move_deaths, 	reg_bitfield_target_p, distribute_notes): Likewise. 	* cse.c (mention_regs, insert, invalidate, invalidate_for_call, 	exp_equiv_p, cse_insn): Likewise. 	* cselib.c (cselib_lookup): Likewise. 	(cselib_invalidate_regno, cselib_record_set): Likewise. 	* df.c (df_ref_record): Likewise. 	* dwarf2out.c (reg_loc_descriptor, multiple_reg_loc_descriptor): 	Likewise. 	* flow.c (mark_reg, insn_dead_p, mark_set_1, mark_used_reg, 	count_or_remove_death_notes_bb): Likewise. 	* function.c (aggregate_value_p, keep_stack_depressed): Likewise. 	* gloval.c (global_alloc, find_reg, mark_reg_store, mark_reg_conflicts, 	mark_reg_death, set_preference, reg_becomes_live, reg_dies): Likewise. 	* integrate.c (mark_stores): Likewise. 	* jump.c (delete_prior_computation): Likewise. 	* lcm.c (reg_dies, reg_becomes_live): Likewise. 	* local-alloc.c (combine_regs, find_free_reg, post_mark_life): Likewise. 	* loop.c (LOOP_REGNO_NREGS): Likewise. 	* postreload.c (reload_combine, reload_combine_note_store, 	reload_combine_note_use, reload_cse_move2add, move2add_note_store): Likewise. 	* ra-colorize.c (combine, color_usable_p, get_free_reg, 	calculate_dont_begin, calculate_dont_begin, colorize_one_web, 	try_recolor_web, insert_coalesced_conflicts, check_colors, 	break_precolored_alias): Likewise. 	* ra-debug.c: Include regs.h 	(ra_print_rtx_object): Likewise. 	* ra-rewr

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1545,7 +1545,7 @@ print-rtl.o : print-rtl.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
     $(RTL_H) $(TREE_H) hard-reg-set.h $(BASIC_BLOCK_H) real.h $(TM_P_H)
 rtlanal.o : rtlanal.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) toplev.h \
    $(RTL_H) hard-reg-set.h $(TM_P_H) insn-config.h $(RECOG_H) real.h flags.h \
-   $(BASIC_BLOCK_H)
+   $(BASIC_BLOCK_H) $(REGS_H)
 
 errors.o : errors.c $(CONFIG_H) $(SYSTEM_H) errors.h
 	$(CC) -c $(ALL_CFLAGS) -DGENERATOR_FILE $(ALL_CPPFLAGS) $(INCLUDES) $< $(OUTPUT_OPTION)
@@ -1702,7 +1702,7 @@ cfgbuild.o : cfgbuild.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) fla
 cfgcleanup.o : cfgcleanup.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
    $(RTL_H) $(TIMEVAR_H) $(BASIC_BLOCK_H) hard-reg-set.h output.h flags.h \
    $(RECOG_H) toplev.h $(GGC_H) insn-config.h cselib.h $(TARGET_H) $(TM_P_H) \
-   $(PARAMS_H)
+   $(PARAMS_H) $(REGS_H)
 cfgloop.o : cfgloop.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) coretypes.h $(TM_H) \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h flags.h
 cfgloopanal.o : cfgloopanal.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) \
@@ -1748,7 +1748,7 @@ ra-colorize.o : ra-colorize.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_
     $(TM_P_H) function.h $(REGS_H) hard-reg-set.h $(BASIC_BLOCK_H) df.h output.h ra.h
 ra-debug.o : ra-debug.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) \
    insn-config.h $(RECOG_H) function.h hard-reg-set.h $(BASIC_BLOCK_H) df.h output.h \
-   ra.h $(TM_P_H)
+   ra.h $(TM_P_H) $(REGS_H)
 ra-rewrite.o : ra-rewrite.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) \
    $(TM_P_H) function.h $(REGS_H) hard-reg-set.h $(BASIC_BLOCK_H) df.h $(EXPR_H) \
    output.h except.h ra.h reload.h insn-config.h
