2004-02-01  Thomas Fitzsimmons  <fitzsim@redhat.com>
	* configure.in: Add pkgconfig check for glib and gthread.
	* configure: Regenerate.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77093 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -880,6 +880,10 @@ else
       AC_SUBST(GTK_CFLAGS)
       AC_SUBST(GTK_LIBS)
 
+      PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.2 gthread-2.0 >= 2.2)
+      AC_SUBST(GLIB_CFLAGS)
+      AC_SUBST(GLIB_LIBS)
+
       PKG_CHECK_MODULES(LIBART, libart-2.0 >= 2.1)
       AC_SUBST(LIBART_CFLAGS)
       AC_SUBST(LIBART_LIBS)
