--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -38,6 +38,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 #include "coretypes.h"
 #include "tm.h"
 #include "tree.h"
+#include "langhooks.h"
 #include "input.h"
 #include "cpplib.h"
 #include "intl.h"
@@ -579,21 +580,21 @@ expr_no_commas:
 	| expr_no_commas '^' expr_no_commas
 		{ $$ = parser_build_binary_op ($2, $1, $3); }
 	| expr_no_commas ANDAND
-		{ $1 = c_common_truthvalue_conversion
+		{ $1 = (*lang_hooks.truthvalue_conversion)
 		    (default_conversion ($1));
 		  skip_evaluation += $1 == truthvalue_false_node; }
 	  expr_no_commas
 		{ skip_evaluation -= $1 == truthvalue_false_node;
 		  $$ = parser_build_binary_op (TRUTH_ANDIF_EXPR, $1, $4); }
 	| expr_no_commas OROR
-		{ $1 = c_common_truthvalue_conversion
+		{ $1 = (*lang_hooks.truthvalue_conversion)
 		    (default_conversion ($1));
 		  skip_evaluation += $1 == truthvalue_true_node; }
 	  expr_no_commas
 		{ skip_evaluation -= $1 == truthvalue_true_node;
 		  $$ = parser_build_binary_op (TRUTH_ORIF_EXPR, $1, $4); }
 	| expr_no_commas '?'
-		{ $1 = c_common_truthvalue_conversion
+		{ $1 = (*lang_hooks.truthvalue_conversion)
 		    (default_conversion ($1));
 		  skip_evaluation += $1 == truthvalue_false_node; }
           expr ':'
@@ -606,9 +607,8 @@ expr_no_commas:
 		{ if (pedantic)
 		    pedwarn ("ISO C forbids omitting the middle term of a ?: expression");
 		  /* Make sure first operand is calculated only once.  */
-		  $<ttype>2 = save_expr ($1);
-		  $1 = c_common_truthvalue_conversion
-		    (default_conversion ($<ttype>2));
+		  $<ttype>2 = save_expr (default_conversion ($1));
+		  $1 = (*lang_hooks.truthvalue_conversion) ($<ttype>2);
 		  skip_evaluation += $1 == truthvalue_true_node; }
 	  ':' expr_no_commas
 		{ skip_evaluation -= $1 == truthvalue_true_node;
@@ -2192,7 +2192,7 @@ if_prefix:
           IF
                 { $<ttype>$ = c_begin_if_stmt (); }
             '(' expr ')'
-		{ c_expand_start_cond (c_common_truthvalue_conversion ($4),
+		{ c_expand_start_cond ((*lang_hooks.truthvalue_conversion) ($4),
 				       compstmt_count,$<ttype>2);
 		  $<itype>$ = stmt_count;
 		  if_stmt_locus = $<location>-1; }
@@ -2301,16 +2301,16 @@ select_or_iter_stmt:
 		  $<ttype>$ = c_begin_while_stmt (); }
 	  '(' expr ')'
                 { c_in_iteration_stmt++;
-		  $4 = c_common_truthvalue_conversion ($4);
+		  $4 = (*lang_hooks.truthvalue_conversion) ($4);
 		  c_finish_while_stmt_cond
-		    (c_common_truthvalue_conversion ($4), $<ttype>2);
+		    ((*lang_hooks.truthvalue_conversion) ($4), $<ttype>2);
 		  $<ttype>$ = add_stmt ($<ttype>2); }
 	  c99_block_lineno_labeled_stmt
                 { c_in_iteration_stmt--;
 		  RECHAIN_STMTS ($<ttype>6, WHILE_BODY ($<ttype>6)); }
 	| do_stmt_start
 	  '(' expr ')' ';'
-                { DO_COND ($1) = c_common_truthvalue_conversion ($3); }
+                { DO_COND ($1) = (*lang_hooks.truthvalue_conversion) ($3); }
 	| do_stmt_start error
 		{ }
 	| FOR
@@ -2323,7 +2323,7 @@ select_or_iter_stmt:
 	  xexpr ';'
                 { if ($6)
 		    FOR_COND ($<ttype>2)
-		      = c_common_truthvalue_conversion ($6); }
+		      = (*lang_hooks.truthvalue_conversion) ($6); }
 	  xexpr ')'
                 { c_in_iteration_stmt++;
 		  FOR_EXPR ($<ttype>2) = $9; }
